@@ -8,6 +8,8 @@ CURRENT
     - split out test mocks into t/lib
     - add mod_perl2 tests
     - sign the dist, add signature test
+    - check for mod_perl version in Makefile.PL.
+        if mod_perl2, require >= 1.9922
 
 0.06  Tue Oct 19 17:29:05 JST 2004
     - removed dependency on Cache::Cache in Makefile.PL
